--- a/International/International.html
+++ b/International/International.html
@@ -9,11 +9,9 @@
 
 <body>
 <img src="International001.jpg" title="International"> <br>
-Series: 5 issues 1947, title change to International Crime Patrol for 1 issue 1948, then Crime Patrol for 10 issues 1948 - 1950, then Crypt of Terror 3 issues 1950, then Tales from the Crypt for 26 issues.<br>
+Series: 5 issues 1947, title change to International Crime Patrol for 1 issue 1948, then Crime Patrol for 10 issues 1948 - 1950, then Crypt of Terror 3 issues 1950, then <a href="../TalesFromTheCrypt/TalesFromTheCrypt.html">Tales from the Crypt</a> for 26 issues.<br>
 Publisher: EC<br>
 <p>
-Gardner Fox wrote the stories for this E.C. title which began a morphing sequence which ended as The Crypt of Terror. The Pre-Trend title began as a crime comic book and it had adventures of continuing characters Van Manhattan and Madelon. The first morphing occurred with #6, which was retitled International Crime Patrol, introduced in #5 with the cover copy “Introducing the INTERNATIONAL CRIME-BUSTING PATROL…featuring Van Manhattan, Igor, Madelon and the Chessmen…in a thrilling book-length story!”
-</p><p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
 </div> </div>
@@ -45,6 +43,9 @@ Gardner Fox wrote the stories for this E.C. title which began a morphing sequenc
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
+</p><p>
+
+Gardner Fox wrote the stories for this E.C. title which began a morphing sequence which ended as The Crypt of Terror. The Pre-Trend title began as a crime comic book and it had adventures of continuing characters Van Manhattan and Madelon. The first morphing occurred with #6, which was retitled International Crime Patrol, introduced in #5 with the cover copy “Introducing the INTERNATIONAL CRIME-BUSTING PATROL…featuring Van Manhattan, Igor, Madelon and the Chessmen…in a thrilling book-length story!”
 
 </p>
 </body>
