--- a/TalesFromTheCrypt/TalesFromTheCrypt.html
+++ b/TalesFromTheCrypt/TalesFromTheCrypt.html
@@ -8,11 +8,77 @@
 </head>
 
 <body>
-<img src="TalesFromTheCrypt020.jpg" title="Tales from the Crypt"> <br>
-Series:20 issues 1950 - 1951<br>
+<img src="TalesFromTheCrypt020.jpg" title="cover by Johnny Craig"> <br>
+Series:27 issues 1950 - 1955<br>
 Publisher: EC<br>
-<p>
 Numbering continues from <a href="../International/International.html">Crypt Tales</a> #19.
+<p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt020.jpg" title="cover by Johnny Craig"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt021.jpg" title="cover by Al Feldstein"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt022.jpg" title="cover by Al Feldstein"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt023.jpg" title="cover by Al Feldstein"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt024.jpg" title="cover by Al Feldstein"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt025.jpg" title="cover by Al Feldstein"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt026.jpg" title="cover by Wally Wood"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt027.jpg" title="cover by Wally Wood"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt028.jpg" title="cover by Al Feldstein"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt029.jpg" title="cover by Jack Davis"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt030.jpg" title="cover by Jack Davis"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt031.jpg" title="cover by Jack Davis"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt032.jpg" title="cover by Jack Davis"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt033.jpg" title="cover by Jack Davis"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt034.jpg" title="cover by Jack Davis"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt035.jpg" title="cover by Jack Davis"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt036.jpg" title="cover by Jack Davis"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt037.jpg" title="cover by Jack Davis"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt038.jpg" title="cover by Jack Davis"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt039.jpg" title="cover by Jack Davis"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt040.jpg" title="cover by Jack Davis"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt041.jpg" title="cover by Jack Davis"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt042.jpg" title="cover by Jack Davis"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt043.jpg" title="cover by Jack Davis"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt044.jpg" title="cover by Jack Davis"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt045.jpg" title="cover by Jack Davis"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt046.jpg" title="cover by Jack Davis"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt047.jpg" title="cover by Frazetta"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt047.jpg" title="cover by Carl Burgos"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt048.jpg" title="cover by Johnny Craig"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt049.jpg" title="cover by Johnny Craig"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt050.jpg" title="cover by Al Feldstein"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt051.jpg" title="cover by Johnny Craig"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt052.jpg" title="cover by Jolyon Yates"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt053.jpg" title="cover by Dean Haspiel"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt054.jpg" title="cover by Bob Camp"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt055.jpg" title="cover by Russ Heath"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt056.jpg" title="cover by Jolyon Yates"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt057.jpg" title="cover by Steve Mannion"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt058.jpg" title="cover by Kyle Baker"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt059.jpg" title="cover by Steve Mannion"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt060.jpg" title="cover by Steve Mannion"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt061.jpg" title="cover by Chris Noeth"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt062.jpg" title="cover by Steve James Romberger"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt063.jpg" title="cover by Steve Mannion"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt064.jpg" title="cover by Steve Mannion"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt065.jpg" title="cover by Christian Zanier"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt066.jpg" title="cover by Rick Parker"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt067.jpg" title="cover by Steve Mannion"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt068.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt069.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt070.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt071.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
 </p><p>
 Tales from the Crypt was an American bi-monthly horror comic anthology series published by EC Comics from 1950 to 1955, producing 27 issues. (The first issue with the title was #20, previously having been International Comics (#1-#5); International Crime Patrol (#6); Crime Patrol (#7-#16) and The Crypt of Terror (#17-#19) for a total of 46 issues in the series.) 
 </p><p>
@@ -33,25 +99,6 @@ Two movies, Demon Knight (1995) and Bordello of Blood (1996) were released in th
 <img src="Bodycount.jpg"> <img src="TalesFromTheHood.jpg">
 </p><p>
 As a follow-up to Demon Knight, producers planned to make a film titled Dead Easy (a.k.a. Fat Tuesday), a New Orleans zombie romp. "We were rewriting it, and it was getting scarier and more intense, but a lot of the humor had been lost, and we always felt that was an important part of Tales from the Crypt -- scare people, then let them laugh." Gilbert Adler told Fangoria in 1996. The third film that was planned, Body Count, also never found its way to the screen.
-</p><p>
-<div class="row"><div class="column">
-<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
-</div> </div>
-
-<div id="myModal" class="modal">
-<span class="close cursor" onclick="closeModal()">&times;</span>
-<div class="modal-content">
-
-<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt020.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt021.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt022.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt023.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt024.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt025.jpg"></div>
-
-<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-<a class="next" onclick="plusSlides(1)">&#10095;</a>
-</div></div>
 
 </p>
 </body>
