--- a/SwampThing/SwampThing.html
+++ b/SwampThing/SwampThing.html
@@ -8,8 +8,10 @@
 </head>
 
 <body>
-<img src="SwampThing1.jpg" title="Cover by Tom Yeates"><br>
-Series: 38 issues (#1 -38) 1982 - 1985, 133 issues (#39 - 171) 1985 - 1996, <br>
+<img src="SwampThing01.jpg" title="Cover by Bernie Wrightson"><br>
+Series: 24 issues (#1 -24) 1972 - 1976<br>
+38 issues "Saga of" (#1 -38) 1982 - 1985<br>
+133 issues (#39 - 171) 1985 - 1996<br>
 Publisher: DC<br>
 <p>
 <div class="row"><div class="column">
@@ -20,12 +22,36 @@ Publisher: DC<br>
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src="SwampThing1.jpg" title="Cover by Tom Yeates"></div>
-<div class="mySlides" style="text-align: center;"><img src="SwampThing20.jpg" title="Cover by Tom Yeates, story by Alan Moore"></div>
-<div class="mySlides" style="text-align: center;"><img src="SwampThing39.jpg" title="Saga dropped from the title"></div>
-<div class="mySlides" style="text-align: center;"><img src="SwampThing129.jpg" title="Cover by Charles Vess, first Vertigo"></div>
-<div class="mySlides" style="text-align: center;"><img src="SwampThing130.jpg" title="Cover by Charles Vess"></div>
-<div class="mySlides" style="text-align: center;"><img src="SwampThing131.jpg" title="Cover by Charles Vess"></div>
+<div class="mySlides" style="text-align: center;"><img src="SwampThing01.jpg" title="Cover by Bernie Wrightson"></div>
+<div class="mySlides" style="text-align: center;"><img src="SwampThing02.jpg" title="Cover by Bernie Wrightson"></div>
+<div class="mySlides" style="text-align: center;"><img src="SwampThing03.jpg" title="Cover by Bernie Wrightson"></div>
+<div class="mySlides" style="text-align: center;"><img src="SwampThing04.jpg" title="Cover by Bernie Wrightson"></div>
+<div class="mySlides" style="text-align: center;"><img src="SwampThing05.jpg" title="Cover by Bernie Wrightson"></div>
+<div class="mySlides" style="text-align: center;"><img src="SwampThing06.jpg" title="Cover by Bernie Wrightson"></div>
+<div class="mySlides" style="text-align: center;"><img src="SwampThing07.jpg" title="Cover by Bernie Wrightson"></div>
+<div class="mySlides" style="text-align: center;"><img src="SwampThing08.jpg" title="Cover by Bernie Wrightson"></div>
+<div class="mySlides" style="text-align: center;"><img src="SwampThing09.jpg" title="Cover by Bernie Wrightson"></div>
+<div class="mySlides" style="text-align: center;"><img src="SwampThing10.jpg" title="Cover by Bernie Wrightson"></div>
+<div class="mySlides" style="text-align: center;"><img src="SwampThing11.jpg" title="Cover by Bernie Wrightson"></div>
+<div class="mySlides" style="text-align: center;"><img src="SwampThing12.jpg" title="Cover by Bernie Wrightson"></div>
+<div class="mySlides" style="text-align: center;"><img src="SwampThing13.jpg" title="Cover by Bernie Wrightson"></div>
+<div class="mySlides" style="text-align: center;"><img src="SwampThing14.jpg" title="Cover by Bernie Wrightson"></div>
+<div class="mySlides" style="text-align: center;"><img src="SwampThing15.jpg" title="Cover by Bernie Wrightson"></div>
+<div class="mySlides" style="text-align: center;"><img src="SwampThing16.jpg" title="Cover by Bernie Wrightson"></div>
+<div class="mySlides" style="text-align: center;"><img src="SwampThing17.jpg" title="Cover by Bernie Wrightson"></div>
+<div class="mySlides" style="text-align: center;"><img src="SwampThing18.jpg" title="Cover by Bernie Wrightson"></div>
+<div class="mySlides" style="text-align: center;"><img src="SwampThing19.jpg" title="Cover by Bernie Wrightson"></div>
+<div class="mySlides" style="text-align: center;"><img src="SwampThing20.jpg" title="Cover by Bernie Wrightson"></div>
+<div class="mySlides" style="text-align: center;"><img src="SwampThing21.jpg" title="Cover by Bernie Wrightson"></div>
+<div class="mySlides" style="text-align: center;"><img src="SwampThing22.jpg" title="Cover by Bernie Wrightson"></div>
+<div class="mySlides" style="text-align: center;"><img src="SwampThing23.jpg" title="Cover by Bernie Wrightson"></div>
+<div class="mySlides" style="text-align: center;"><img src="SwampThing24.jpg" title="Cover by Bernie Wrightson"></div>
+<div class="mySlides" style="text-align: center;"><img src="SwampThing1982_01.jpg" title="Cover by Tom Yeates"></div>
+<div class="mySlides" style="text-align: center;"><img src="SwampThing1982_20.jpg" title="Cover by Tom Yeates, story by Alan Moore"></div>
+<div class="mySlides" style="text-align: center;"><img src="SwampThing1982_39.jpg" title="Saga dropped from the title"></div>
+<div class="mySlides" style="text-align: center;"><img src="SwampThing1982_129.jpg" title="Cover by Charles Vess, first Vertigo"></div>
+<div class="mySlides" style="text-align: center;"><img src="SwampThing1982_130.jpg" title="Cover by Charles Vess"></div>
+<div class="mySlides" style="text-align: center;"><img src="SwampThing1982_131.jpg" title="Cover by Charles Vess"></div>
 <div class="mySlides" style="text-align: center;"><img src="SwampThingMovie1982.jpg" title="First Movie"></div>
 <div class="mySlides" style="text-align: center;"><img src="SwampThingMovie1989.jpg" title="Worst Movie"></div>
 <div class="mySlides" style="text-align: center;"><img src="SwampThingCartoon.jpg" title="Cartoon Series"></div>
@@ -36,7 +62,7 @@ Publisher: DC<br>
 </p><p>
 The series starts as "The Saga of the Swamp Thing" for the first 38 issues, then changes names to just "Swamp Thing", then changes publisher brands from DC to Vertigo with issue #129.
 </p><p>
-The Swamp Thing is a fictional character and antihero in comic books published by American company DC Comics. A humanoid/plant elemental creature, created by writer Len Wein and artist Bernie Wrightson, Swamp Thing has had several humanoid or monster incarnations in various different storylines. 
+The Swamp Thing is a fictional character and antihero in comic books published by American company DC Comics. A humanoid/plant elemental creature, created by writer Len Wein and artist <a href="../BernieWrightson/BernieWrightson.html">Bernie Wrightson</a>, Swamp Thing has had several humanoid or monster incarnations in various different storylines. 
 </p><p>
 The character first appeared in House of Secrets #92 (July 1971) in a stand-alone horror story set in the early 20th century. The character then returned in a solo series, set in the contemporary world and in the general DC continuity. The character is a swamp monster that resembles an anthropomorphic mound of vegetable matter, and fights to protect its swamp home, the environment in general, and humanity from various supernatural or terrorist threats.
 </p><p>
