--- a/kb.html
+++ b/kb.html
@@ -1269,6 +1269,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>American Freak</td>
+<td>1994</td>
+<td>Vertigo</td>
+<td><a href="AmericanFreak/AmericanFreak.html">Details</a></td>
+</tr>
+
+<tr>
 <td>American Splendor</td>
 <td>1976</td>
 <td>Dark Horse</td>
@@ -1346,6 +1353,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Angel and the Ape</td>
+<td>1968</td>
+<td>DC</td>
+<td><a href="AngelAndTheApe/AngelAndTheApe.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Angela Asgard's Assassin</td>
 <td>2014</td>
 <td>Marvel</td>
@@ -1357,6 +1371,13 @@ Creative Knowledgebase<br>
 <td>2015</td>
 <td>Marvel</td>
 <td><a href="AngelaQueenOfHel/AngelaQueenOfHel.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Angeltown</td>
+<td>2005</td>
+<td>Vertigo</td>
+<td><a href="Angeltown/Angeltown.html">Details</a></td>
 </tr>
 
 <tr>
