--- a/kb.html
+++ b/kb.html
@@ -11785,6 +11785,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Sun Runners</td>
+<td>1984</td>
+<td>PC</td>
+<td><a href="SunRunners/SunRunners.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Sunfire and Big Hero Six</td>
 <td>1998</td>
 <td>Marvel</td>
