--- a/AstroCity/AstroCity.html
+++ b/AstroCity/AstroCity.html
@@ -2,19 +2,65 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Astro City</title>
 </head>
 
 <body>
-<h2>Astro City</h2>
 <img src="AstroCity.jpg"> <br>
-Series: on-going<br>
-Illustrator: Brent Eric Anderson, Alex Ross (cover)<br>
-Writer: Kurt Busiek<br>
-Publisher: 2013 DC<br>
+1995-2000 Image, 1999-2018 DC<br>
 <p>
-ASTRO CITY is back in a new, ongoing monthly series that showcases old heroes and new, as The Ambassador comes to Earth, and an ordinary man is caught up in a cosmic conflict! Featuring the return of favorites like Samaritan and Honor Guard, and the debut of some new sensations! Plus, the seeds of a new mystery: Who is the Broken Man? The entire award-winning creative team is back to kick off a new epoch of the human and the super human. Get in on the ground floor of Astro City's next epic! 
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="AstroCity01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstroCity02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstroCity03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstroCity04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstroCity05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstroCity06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstroCity07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstroCity08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstroCity09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstroCity10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstroCity11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstroCity12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstroCity13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstroCity14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstroCity15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstroCity16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstroCity17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstroCity18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstroCity19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstroCity20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstroCity21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstroCity22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstroCity23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstroCity24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstroCity25.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstroCity26.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstroCity27.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstroCity28.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AstroCity29.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
+</p><p>
+Astro City is an American superhero anthology comic book series centered on a fictional American city of that name. Created and written by Kurt Busiek, the series is mostly illustrated by Brent Anderson, with character designs and painted covers by Alex Ross.
+</p><p>
+The first volume was published from 1995 to 1996 by Image Comics. In 1996, a second volume was launched under the Homage Comics imprint of Image partner studio WildStorm, which was then acquired by DC Comics, where the series later transitioned to the WildStorm Signature Series imprint and continued until 2010. 
+</p><p>
+During this period it switched from a regular ongoing series to a sequence of periodic mini-series and special issues. A third, ongoing volume was launched under DC's Vertigo imprint in 2013 and concluded in 2018, reverting to occasional miniseries and original graphic novels. Counting all series, mini-series and special issues, over 100 issues have been published.
+</p><p>
+Astro City and its creators have won a number of Eisner Awards and Harvey Awards, the American comic industry's equivalent of science fiction's Hugo Awards, as well as several Comics Buyer's Guide Fan Awards.
 </p>
 </body>
 </html>
