--- a/kb.html
+++ b/kb.html
@@ -1676,16 +1676,10 @@ Creative Knowledgebase<br>
 
 <tr>
 <td>Astro City</td>
-<td>2013</td>
-<td>DC</td>
+<td>1995</td>
+<td><div class="mySlides" style="text-align: center;"><img src="AstroCity12.jpg"></div>
+DC</td>
 <td><a href="AstroCity/AstroCity.html">Details</a></td>
-</tr>
-
-<tr>
-<td>Astro City</td>
-<td>1993</td>
-<td>Image</td>
-<td><a href="AstroCityImage/AstroCityImage.html">Details</a></td>
 </tr>
 
 <tr>
