--- a/kb.html
+++ b/kb.html
@@ -1853,6 +1853,13 @@ DC</td>
 </tr>
 
 <tr>
+<td>Bang Tango</td>
+<td>2009</td>
+<td>Vertigo</td>
+<td><a href="BangTango/BangTango.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Banner</td>
 <td>2001</td>
 <td>Marvel</td>
@@ -2008,6 +2015,13 @@ DC</td>
 </tr>
 
 <tr>
+<td>Battlaxes</td>
+<td>2000</td>
+<td>Vertigo</td>
+<td><a href="Battleaxes/Battleaxes.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Battlestar Galactica</td>
 <td>1979</td>
 <td>Marvel</td>
@@ -2116,6 +2130,13 @@ DC</td>
 <td>2017</td>
 <td>Abrams Books</td>
 <td><a href="BestWeCouldDo/BestWeCouldDo.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Beware the Creeper</td>
+<td>1968</td>
+<td>DC</td>
+<td><a href="BewareTheCreeper/BewareTheCreeper.html">Details</a></td>
 </tr>
 
 <tr>
