Books of Faerie

--- a/kb.html
+++ b/kb.html
@@ -2511,6 +2511,13 @@ DC</td>
 </tr>
 
 <tr>
+<td>Books of Faerie</td>
+<td>1997</td>
+<td>Vertigo</td>
+<td><a href="BooksOfFaerie/BooksOfFaerie.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Books of Magic</td>
 <td>1990</td>
 <td>Vertigo</td>
