--- a/StrangeWorldsAtlas/StrangeWorldsAtlas.html
+++ b/StrangeWorldsAtlas/StrangeWorldsAtlas.html
@@ -4,13 +4,12 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="../slideshow.css">
 <script src="../slideshow.js"></script>
-<title>Strange Worlds</title>
+<title>Strange Worlds Atlas</title>
 </head>
 
 <body>
 <img src="StrangeWorlds1.jpg"> <br>
-Series: 5 issues 1958<br>
-Publisher: Atlas<br>
+
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -30,9 +29,9 @@ Publisher: Atlas<br>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-A Science Fiction anthology launched along with Tales of Suspense (Marvel, 1959 series) and Tales to Astonish (Marvel, 1959 series) to expand and revamp Marvel's SF line (along with the revived Journey Into Mystery (Marvel, 1952 series) and two pre-existing titles) following Jack Kirby's return to the company. Almost all stories were narrated in the first person.
+Strange Worlds was the name of two American science-fiction anthology comic-book series of the 1950s, the first published by Avon Comics, the second by a Marvel Comics predecessor, Atlas Comics. Each featured work by such major comics artists as Steve Ditko, Jack Kirby, Joe Kubert, and Wally Wood.
 </p><p>
-Scripts were generally not credited. However, it is well known that Stan Lee (sometimes assisted by Larry Lieber, or Lieber on his own) wrote the overwhelming majority of these stories from 1959 to 1963. Where there is no positive confirmation, credits may be listed as "Stan Lee ?; Larry Lieber ?", or either person individually, or simply "?", according to the indexer's best information.
+The second Strange Worlds was a short-lived series from Marvel Comics' 1950s predecessor company, Atlas Comics. Running five issues (Dec. 1958 – Aug. 1959), the title nonetheless showcased artwork by industry legend Jack Kirby, who penciled all but one cover and supplied a story each in issues #1 and #3, and future Spider-Man co-creator Steve Ditko, who drew the cover of #2 and a story in each issue.
 </p>
 </body>
 </html>
