--- a/StrangeWorldsAvon/StrangeWorldsAvon.html
+++ b/StrangeWorldsAvon/StrangeWorldsAvon.html
@@ -4,13 +4,12 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="../slideshow.css">
 <script src="../slideshow.js"></script>
-<title>Strange Worlds</title>
+<title>Strange Worlds Avon</title>
 </head>
 
 <body>
 <img src="StrangeWorlds1.jpg"> <br>
-Series: 14 issues 1950<br>
-Publisher: Avon<br>
+
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -39,13 +38,9 @@ Publisher: Avon<br>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Strange Worlds was the name of two American, science-fiction anthology comic book series of the 1950s, the first published by Avon Comics, the second by a Marvel Comics predecessor, Atlas Comics. Each featured work by such major comics artists as Steve Ditko, Jack Kirby, Joe Kubert, and Wally Wood.
+Strange Worlds was the name of two American science-fiction anthology comic-book series of the 1950s, the first published by Avon Comics, the second by a Marvel Comics predecessor, Atlas Comics. Each featured work by such major comics artists as Steve Ditko, Jack Kirby, Joe Kubert, and Wally Wood.
 </p><p>
-The first comic-book series to be titled Strange Worlds ran 15 issues published in two sequences by Avon Comics. Issues #1-10 ran cover-dated November 1950 to November 1952. Issues #11-17 were never released, the series began publication again with #18, having taken over the numbering of the defunct Avon comic Eerie. This second sequence ran through issue #22 (Oct./Nov. 1954 – Sept./Oct. 1955). One ongoing feature in the otherwise anthological title was "Kenton of the Star Patrol".
-</p><p>
-While Avon was a minor comics publisher in relation to such contemporaneous industry leaders as Atlas Comics, DC Comics, and EC Comics, the series featured artwork by such top talents as Wally Wood, who would soon go on to become an industry star at EC; Joe Kubert, later a signature artist of DC's Hawkman and Sgt. Rock; portrait painter Everett Raymond Kinstler and Western-art painter Charles Sultan, early in their careers; and seminal African-American comics artist Alvin C. Hollingsworth a.k.a. Alvin Holly.
-</p><p>
-Issues #10 to #17 do not exist; there is a 2-year gap between issue #9 and restart, #18
+he first comic-book series to be titled Strange Worlds ran 15 issues published in two sequences by Avon Comics. Issues #1-10 ran cover-dated November 1950 to November 1952. No issues #11-17 were released, and the series began publication again with #18, having taken over the numbering of the defunct Avon comic Eerie. This second sequence ran through issue #22 (Oct./Nov. 1954 – Sept./Oct. 1955). One ongoing feature in the otherwise anthological title was "Kenton of the Star Patrol".
 </p>
 </body>
 </html>
