--- a/SwampThing/SwampThing.html
+++ b/SwampThing/SwampThing.html
@@ -60,7 +60,7 @@ Publisher: DC<br>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-The series starts as "The Saga of the Swamp Thing" for the first 38 issues, then changes names to just "Swamp Thing", then changes publisher brands from DC to Vertigo with issue #129.
+The series starts as "Swamp Thing", then restarts as "The Saga of the Swamp Thing" for 38 issues, then changes back to just "Swamp Thing", and changes publisher brands from DC to Vertigo with issue #129.
 </p><p>
 The Swamp Thing is a fictional character and antihero in comic books published by American company DC Comics. A humanoid/plant elemental creature, created by writer Len Wein and artist <a href="../BernieWrightson/BernieWrightson.html">Bernie Wrightson</a>, Swamp Thing has had several humanoid or monster incarnations in various different storylines. 
 </p><p>
