--- a/AmazingFantasy/AmazingFantasy.html
+++ b/AmazingFantasy/AmazingFantasy.html
@@ -8,18 +8,11 @@
 </head>
 
 <body>
-<h2>Amazing Adventures / Fantasy</h2>
-<img src="AmazingAdventures1961Series001.jpg"> 
+<img src="AmazingAdventures1961Series001.jpg">
 <img src="AmazingAdventures1961Series015.jpg">
- <br>
-Series: on-going<br>
-Illustrator: Steve Ditko<br>
-Writer: Stan Lee<br>
-Publisher: 1961 Marvel<br>
+<br>
+1961 by Marvel, Amazing Adventures #1-6, Amazing Adult Fantasy #7-14, Amazing Fantasy #15,<a href="../AmazingSpider-Man/AmazingSpiderMan.html">Amazing Spider-Man #1</a>, Amazing Adventures #16-18 in 1995.
 <p>
-Amazing Adventures #1-6, becomes Amazing Adult Fantasy #7-14, then 
-Amazing Fantasy #15, the first appearance of Spider-Man, which became so successful they changed the name to Amazing Spider-Man #1. The series came back for 3 issues as Amazing Adventures #16-18 in 1995.
-</p><p>
 <div class="row">
 <div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -103,78 +96,13 @@ Amazing Fantasy #15, the first appearance of Spider-Man, which became so success
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div>
 </div>
-</p>
-
-Issues:<ul>
-<li><a href="AmazingFantasy.html">Amazing Adventures #1</a></li>
-<li><a href="AmazingFantasy002.html">Amazing Adventures #2</a></li>
-<li><a href="AmazingFantasy003.html">Amazing Adventures #3</a></li>
-<li><a href="AmazingFantasy004.html">Amazing Adventures #4</a></li>
-<li><a href="AmazingFantasy005.html">Amazing Adventures #5</a></li>
-<li><a href="AmazingFantasy006.html">Amazing Adventures #6</a></li>
-<li><a href="AmazingFantasy007.html">Amazing Fantasy #7</a></li>
-<li><a href="AmazingFantasy008.html">Amazing Fantasy #8</a></li>
-<li><a href="AmazingFantasy009.html">Amazing Fantasy #9</a></li>
-<li><a href="AmazingFantasy010.html">Amazing Fantasy #10</a></li>
-<li><a href="AmazingFantasy011.html">Amazing Fantasy #11</a></li>
-<li><a href="AmazingFantasy012.html">Amazing Fantasy #12</a></li>
-<li><a href="AmazingFantasy013.html">Amazing Fantasy #13</a></li>
-<li><a href="AmazingFantasy014.html">Amazing Fantasy #14</a></li>
-<li><a href="AmazingFantasy015.html">Amazing Fantasy #15</a></li>
-<li><a href="AmazingAdventures1970series01.html">Amazing Adventures #1</a></li>
-<li><a href="AmazingFantasy016.html">Amazing Adventures #2</a></li>
-<li><a href="AmazingFantasy017.html">Amazing Adventures #3</a></li>
-<li><a href="AmazingFantasy018.html">Amazing Adventures #4</a></li>
-<li><a href="AmazingFantasy019.html">Amazing Adventures #5</a></li>
-<li><a href="AmazingFantasy020.html">Amazing Adventures #6</a></li>
-<li><a href="AmazingFantasy021.html">Amazing Adventures #7</a></li>
-<li><a href="AmazingFantasy022.html">Amazing Adventures #8</a></li>
-<li><a href="AmazingFantasy023.html">Amazing Adventures #9</a></li>
-<li><a href="AmazingFantasy024.html">Amazing Adventures #10</a></li>
-<li><a href="AmazingFantasy025.html">Amazing Adventures #11</a></li>
-<li><a href="AmazingFantasy026.html">Amazing Adventures #12</a></li>
-<li><a href="AmazingFantasy027.html">Amazing Adventures #13</a></li>
-<li><a href="AmazingFantasy028.html">Amazing Adventures #14</a></li>
-<li><a href="AmazingFantasy029.html">Amazing Adventures #15</a></li>
-<li><a href="AmazingFantasy030.html">Amazing Adventures #16</a></li>
-<li><a href="AmazingFantasy031.html">Amazing Adventures #17</a></li>
-<li><a href="AmazingFantasy032.html">Amazing Adventures #18</a></li>
-<li><a href="AmazingFantasy033.html">Amazing Adventures #19</a></li>
-<li><a href="AmazingFantasy034.html">Amazing Adventures #20</a></li>
-<li><a href="AmazingFantasy035.html">Amazing Adventures #21</a></li>
-<li><a href="AmazingFantasy036.html">Amazing Adventures #22</a></li>
-<li><a href="AmazingFantasy037.html">Amazing Adventures #23</a></li>
-<li><a href="AmazingFantasy038.html">Amazing Adventures #24</a></li>
-<li><a href="AmazingFantasy039.html">Amazing Adventures #25</a></li>
-<li><a href="AmazingFantasy040.html">Amazing Adventures #26</a></li>
-<li><a href="AmazingFantasy041.html">Amazing Adventures #27</a></li>
-<li><a href="AmazingFantasy042.html">Amazing Adventures #28</a></li>
-<li><a href="AmazingFantasy043.html">Amazing Adventures #29</a></li>
-<li><a href="AmazingFantasy044.html">Amazing Adventures #30</a></li>
-<li><a href="AmazingFantasy045.html">Amazing Adventures #31</a></li>
-<li><a href="AmazingFantasy046.html">Amazing Adventures #32</a></li>
-<li><a href="AmazingFantasy047.html">Amazing Adventures #33</a></li>
-<li><a href="AmazingFantasy048.html">Amazing Adventures #34</a></li>
-<li><a href="AmazingFantasy049.html">Amazing Adventures #35</a></li>
-<li><a href="AmazingFantasy050.html">Amazing Adventures #36</a></li>
-<li><a href="AmazingFantasy051.html">Amazing Adventures #37</a></li>
-<li><a href="AmazingFantasy052.html">Amazing Adventures #38</a></li>
-<li><a href="AmazingFantasy053.html">Amazing Adventures #39</a></li>
-<li><a href="AmazingFantasy054.html">Amazing Adventures #1</a></li>
-<li><a href="AmazingFantasy055.html">Amazing Adventures #2</a></li>
-<li><a href="AmazingFantasy056.html">Amazing Adventures #3</a></li>
-<li><a href="AmazingFantasy057.html">Amazing Adventures #4</a></li>
-<li><a href="AmazingFantasy058.html">Amazing Adventures #5</a></li>
-<li><a href="AmazingFantasy059.html">Amazing Adventures #6</a></li>
-<li><a href="AmazingFantasy060.html">Amazing Adventures #7</a></li>
-<li><a href="AmazingFantasy061.html">Amazing Adventures #8</a></li>
-<li><a href="AmazingFantasy062.html">Amazing Adventures #9</a></li>
-<li><a href="AmazingFantasy063.html">Amazing Adventures #10</a></li>
-<li><a href="AmazingFantasy064.html">Amazing Adventures #11</a></li>
-<li><a href="AmazingFantasy065.html">Amazing Adventures #12</a></li>
-<li><a href="AmazingFantasy066.html">Amazing Adventures #13</a></li>
-<li><a href="AmazingFantasy067.html">Amazing Adventures #14</a></li>
-</ul>
+</p><p>
+Amazing Adventures is the name of several anthology comic book series, all but one published by Marvel Comics. The earliest Marvel series of that name introduced the company's first superhero of the late-1950s to early-1960s period fans and historians call the Silver Age of Comic Books. That same series also included the first comic book to be labeled "Marvel Comics".
+</p><p>
+It featured primarily science fiction and drive-in movie-style monster stories, virtually all drawn by either Jack Kirby or Steve Ditko. Its first issue introduced the supernatural monster-hunter Doctor Droom, Marvel's first Silver Age of Comic Books superhero. Droom had powers of telepathy and hypnotic suggestion taught him by a Tibetan lama.
+</p><p>
+He resurfaced in the 1970s as Doctor Druid, having been renamed to avoid confusion with Doctor Doom.
+</p><p>
 
 </body>
 </html>
