--- a/Saga/Saga.html
+++ b/Saga/Saga.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Saga</title>
 </head>
 
@@ -12,9 +13,51 @@ Writer: Brian K. Vaughan<br>
 Illustrator: Fiona Staples<br>
 Publisher: 2017 Image Comics<br>
 <p>
+
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Saga01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Saga02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Saga03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Saga04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Saga05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Saga06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Saga07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Saga08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Saga09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Saga10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Saga11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Saga12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Saga13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Saga14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Saga15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Saga16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Saga17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Saga18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Saga19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Saga20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Saga21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Saga22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Saga23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Saga24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Saga25.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
+</p><p>
 If Saga’s 48 issues have confirmed anything, it’s that writer Brian K. Vaughan and artist Fiona Staples are in this for the (very) long haul. At the end of this winding expedition of family, loyalty, sex and bananas sci-fi, grad students will write their thesis on this landmark comic and upcoming writers will avoid the genre, woefully sighing, I’m not touching that shit after Saga. 
 </p><p>
 The first act witnessed two star-crossed alien lovers give birth to a hybrid baby, united in an us-against-the-universe struggle as two amoral armies pursued them. The second act showed how the greatest battles—drug addiction, infidelity and doubt—can emerge in the most peaceful lulls. The third struck a personal blow against parent heroes Alana and Marko midway through. Reading Saga is experiencing an obsessive simulation of a family’s life-span, far more real than any comic with preying mantis school teachers should ever be. The creative team hasn’t stopped melding sucker-punch creativity with gut-wrenching drama, and not one issue has failed to warrant our endorsement.
+</p><p>
+The series has been met with wide critical acclaim, and is one of the most celebrated comics being published in the United States. It has also garnered numerous awards, including twelve Eisner and seventeen Harvey Awards between 2013 and 2017. The first trade paperback collection won the 2013 Hugo Award for Best Graphic Story. It has also been noted for its diverse portrayal of ethnicity, sexuality and gender social roles, and for its treatment of war.
 </p>
 
 </body>
