--- a/kb.html
+++ b/kb.html
@@ -12689,6 +12689,13 @@ DC</td>
 </tr>
 
 <tr>
+<td>Voodoo</td>
+<td>1952</td>
+<td>Farrell</td>
+<td><a href="Voodoo/Voodoo.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Wally Wood</td>
 <td>1927</td>
 <td>Creator</td>
