--- a/kb.html
+++ b/kb.html
@@ -5049,6 +5049,13 @@ DC</td>
 </tr>
 
 <tr>
+<td>Fantastic Fears</td>
+<td>1954</td>
+<td>Farrell</td>
+<td><a href="FantasticFears/FantasticFears.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Fantastic Five</td>
 <td>1999</td>
 <td>Marvel</td>
