--- a/kb.html
+++ b/kb.html
@@ -8913,6 +8913,13 @@ DC</td>
 </tr>
 
 <tr>
+<td>Ms. Mystic</td>
+<td>1982</td>
+<td>PC</td>
+<td><a href="MsMystic/MsMystic.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Muppet Show</td>
 <td>1974</td>
 <td>Jim Henson Company</td>
