--- a/TalesFromTheCrypt/TalesFromTheCrypt.html
+++ b/TalesFromTheCrypt/TalesFromTheCrypt.html
@@ -74,6 +74,7 @@ Numbering continues from <a href="../International/International.html">Crypt Tal
 <div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt069.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt070.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt071.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesFromTheCrypt072.jpg" title="fake cover by Francesco Francavilla"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
