--- a/kb.html
+++ b/kb.html
@@ -12619,6 +12619,13 @@ DC</td>
 </tr>
 
 <tr>
+<td>Vault of Horror</td>
+<td>1973</td>
+<td>EC</td>
+<td><a href="VaultOfHorror/VaultOfHorror.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Venom</td>
 <td>2003</td>
 <td>Marvel</td>
