--- a/kb.html
+++ b/kb.html
@@ -490,14 +490,14 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
-<td>Adventure into Fear</td>
+<td>Adventure Into Fear</td>
 <td>1970</td>
 <td>Marvel</td>
 <td><a href="Fear/fear.html">Details</a></td>
 </tr>
 
 <tr>
-<td>Adventure into Mystery</td>
+<td>Adventure Into Mystery</td>
 <td>1956</td>
 <td>Atlas</td>
 <td><a href="AdventureIntoMystery/adventureintomystery.html">Details</a></td>
@@ -511,7 +511,7 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
-<td>Adventures in Reading</td>
+<td>Adventures In Reading</td>
 <td>1990</td>
 <td>Marvel</td>
 <td><a href="AdventuresInReading/adventuresinreading.html">Details</a></td>
@@ -525,10 +525,17 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
-<td>Adventures into Terror</td>
+<td>Adventures Into Terror</td>
 <td>1951</td>
 <td>Marvel</td>
 <td><a href="Joker/joker.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Adventures Into The Unknown</td>
+<td>1948</td>
+<td>ACG</td>
+<td><a href="AdventuresIntoTheUnknown/AdventuresIntoTheUnknown.html">Details</a></td>
 </tr>
 
 <tr>
@@ -4683,12 +4690,18 @@ DC</td>
 </tr>
 
 <tr>
-<td>Eerie</td>
+<td>Eerie Comics</td>
+<td>1941</td>
+<td>Avon</td>
+<td><a href="EerieAvon/EerieAvon.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Eerie Magazine</td>
 <td>1966</td>
 <td>Warren</td>
 <td><a href="Eerie/Eerie.html">Details</a></td>
 </tr>
-
 
 <tr>
 <td>Effigy</td>
@@ -9636,7 +9649,7 @@ DC</td>
 <tr>
 <td>Out of the Night</td>
 <td>1952</td>
-<td>American Comics</td>
+<td>ACG</td>
 <td><a href="OutOfTheNight/OutOfTheNight.html">Details</a></td>
 </tr>
 
@@ -12620,7 +12633,7 @@ DC</td>
 
 <tr>
 <td>Vault of Horror</td>
-<td>1973</td>
+<td>1950</td>
 <td>EC</td>
 <td><a href="VaultOfHorror/VaultOfHorror.html">Details</a></td>
 </tr>
